# football-predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: docker-publish.yml
data/: fifa_rankings_snapshot.csv
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: backfill_f1_historical.py  crosscheck_f1.py  drop_f1_tables.py  fetch_odds.py  init_db.py  predict_f1.py  predict_upcoming.py  run_backtest.py  run_scheduler.py  sync_f1.py  sync_matches.py  train_all.py  train_f1.py  train_model.py  train_world_cup.py  validate_predictions.py
src/footy/: config.py  data.py  db.py  domain.py  orm.py
src/footy/betting/: backtest.py  bankroll.py  staking.py  value.py
src/footy/ingest/: client.py  matches.py  odds.py  schemas.py  stats.py
src/footy/ingest/providers/: api_football.py  base.py  oddalerts.py  registry.py  sportmonks.py  the_odds_api.py  thestatsapi.py
src/footy/ml/: features.py  features_worldcup.py  predict.py  registry.py  train.py  train_parallel.py
src/footy/predictions/: metrics.py  tracker.py  validator.py
src/joblog/: __init__.py
src/sports/: contract.py  registry.py
src/sports/f1/: adapter.py  data.py  domain.py  orm.py
src/sports/f1/ingest/: schemas.py  sessions.py
src/sports/f1/ingest/providers/: base.py  jolpica.py  openf1.py  (+1 more)
src/sports/f1/ml/: features.py  predict.py  train.py
src/sports/football/: adapter.py
tests/: conftest.py  test_backtest.py  test_data.py  test_f1_features.py  test_f1_ingest.py  test_f1_providers_openf1.py  test_f1_train_predict.py  test_features.py  test_features_worldcup.py  test_football_sportmodule.py  test_joblog.py  test_jolpica_provider.py  test_metrics.py  test_predict.py  test_predict_f1.py  test_predict_upcoming.py  test_providers_api_football.py  test_providers_oddalerts.py  test_providers_sportmonks.py  test_providers_the_odds_api.py  test_providers_thestatsapi.py  test_scheduler.py  test_staking.py  test_train.py  test_train_all.py  test_validator.py  test_value.py  test_web.py
web/: Dockerfile  app.py  badges.py  metrics_color.py
web/static/: style.css
web/templates/: _badge.html  base.html  f1_predictions.html  f1_sessions.html  index.html  models.html  predictions.html
