[project]
name = "footy"
version = "0.1.0"
description = "Football 1X2 prediction + paper-betting bot (no real-money execution)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "joblib>=1.3",
    "tenacity>=8.2",
    "xgboost>=2.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "pandas-stubs", "types-psycopg2"]
web = ["fastapi>=0.110", "jinja2>=3.1", "uvicorn[standard]>=0.29"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["footy", "sports", "joblog"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib.*", "xgboost.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "scripts", "web"]
testpaths = ["tests"]
